--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
 .App {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url(./assets/bg-noise.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+.section{
+  width: 100%;
+  min-height: calc(100vh - 76px);
+  display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.container{
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+}
+.content.grid {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+  width: 600px;
+  margin: 0 auto 40px;
+}
+.content.grid > div{
+  flex: 0 0 75%;
+  width: 75%;
+}
+.content.grid img.section-icon {
+  flex: 0 0 25%;
+  width: 25%;
+}
+div.button{
+  border-radius: 20px;
+  background-color: var(--pink-accent);
+  border: 2px solid var(--blue-accent);
+  box-shadow: 5px 5px 0 0 var(--aqua-accent);
+  width: 250px;
+  padding: 10px 60px;
+  margin: 20px auto;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 20px;
+}
+div.button:hover{
+  box-shadow: 8px 8px 0 0 var(--aqua-accent);
+  background-color: #c72266;
+}
+div.button a{
+  color: var(--text-color);
+  text-decoration: none;
+  font-size: 24px;
+}
+h2.section-title{
+  position: relative;
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+p{
+  color: var(--text-color);
+  text-align: justify;
+  font-size: 14px;
+}
+.content.grid.left p {
+  text-align: left;
+}
+.content.grid.right p {
+  text-align: right;
+}
+div#footer {
+  width: 100%;
+  height: 60px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div#footer .social-icons svg{
+  width: 20px;
+  height: 20px;
+  padding: 5px 10px 0;
+}
+div#footer .social-icons svg path{
+  fill: var(--text-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 768px) {
+  h2.section-title{
+    font-size: 42px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  p{
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  .section{
+    padding: 98px 0;
+  }
+  .section .container {
+    padding: 0 20px;
+  }
+  .content.grid {
+    width: 90%;
+    gap: 0px;
+    flex-direction: column;
+  }
+  .content.grid.left{
+    flex-direction: column-reverse;
+  }
+  .content.grid.right{
+    flex-direction: column;
+  }
+  .content.grid.left p, .content.grid.right p{
+    text-align: center !important;
+    font-size: 12px;
+  }
+  .content.grid img{
+    width: 200px;
+  }
+  .content.grid img.section-icon, .content.grid > div {
+    flex: 0 0 100%;
+    width: 100%;
+  }
+  div.button {
+    padding: 6px 40px;
+    width: 200px;
   }
 }
