--- a/src/components/FAQ/Faq.css
+++ b/src/components/FAQ/Faq.css
@@ -33,8 +33,10 @@ div#faqs .faq-item .faq-content p{
     }
     div#faqs .faq-item .faq-title h2{
         font-size: 12px;
+        line-height: 16px;
     }
     div#faqs .faq-item .content p{
         font-size: 14px;
+        line-height: 16px;
     }
 }
