--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+iframe{
+  margin: 40px auto;
+}
+.iframe {
+  width: 100%;
+  text-align: center;
+}
 h1, h2, h3, h4, h5, h6{
   font-family: 'Fashion Fetish';
   font-weight: bold;
@@ -79,4 +86,12 @@ canvas {
   opacity: 0.5;
   position: fixed;
   inset: 0;
+}
+
+@media screen and (max-width: 560px){   
+  iframe{
+    width: 90%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+  }
 }
