--- a/src/App.css
+++ b/src/App.css
@@ -83,10 +83,13 @@ div.button a{
   text-decoration: none;
   font-size: 24px;
 }
+.button, button{
+  font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
 h2.section-title{
   position: relative;
   font-size: 50px;
-  line-height: 50px;
+  line-height: 60px;
   text-align: center;
   letter-spacing: 2px;
 }
