--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -44,6 +44,7 @@ div#hero .container h1{
     margin-top: 0px;
     color: #ffffff66;
     letter-spacing: 2px;
+    line-height: 2em;
 }
 
 @media screen and (max-width: 768px) {
